<resources>
    <string name="app_name">Love2Laundry</string>
    <string name="action_settings">Settings</string>
    <string name="uk">United Kingdom</string>
    <string name="uae">United Arab Emirates</string>
    <string name="country">Country</string>
    <string name="title_activity_uk">United Kingdom</string>
    <string name="address">Address</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_enter_postcode">Enter Your Postcode</string>
    <string name="prompt_enter_area">Enter Your Area</string>

    <string name="prompt_check_price">Check Price</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="post_code">Post Code</string>
    <string name="area_name">Area Name</string>
    <string name="building_name_number">Building Name or Number</string>
    <string name="street_name">Street Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_uae">UAE</string>
    <string name="title_activity_listing">Listing</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Love2laundry</string>
    <string name="nav_header_subtitle">Love2laundry</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="checkout_button">Checkout</string>
    <string name="action_check_out">Checkout</string>
    <string name="town">Town</string>
    <string name="pick_up_date">Pick up Date</string>
    <string name="pick_up_time">Pick up Time</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="my_cart">My Cart</string>
    <string name="discount_code">Use Discount code</string>
    <string name="apply">Apply</string>
    <string name="account_notes_message">Account Notes Message</string>
    <string name="additional_instruction_message">Additional Instruction Message</string>
    <string name="credit_card">Credit Card</string>
    <string name="invoice_no">Invoice #</string>
    <string name="status">Status</string>
    <string name="created_time">Created Time</string>
    <string name="pickup_time_heading">Pickup Time</string>
    <string name="delivery_time_heading">Delivery Time</string>
    <string name="services">Services</string>
    <string name="service">Service</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="qty">Qty</string>
    <string name="total">Total</string>
    <string name="preferences">Preferences</string>
    <string name="pending_invoices">Pending Invoices</string>
    <string name="processed_invoices">Processed Invoices</string>
    <string name="canceled_invoices">Canceled Invoices</string>
    <string name="completed_invoices">Completed Invoices</string>
    <string name="title_activity_invoices">Invoices</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit_invoice">Edit Invoice</string>
    <string name="title_activity_loyalty">Loyalty</string>
    <string name="title_activity_loyalties">Loyalties</string>
    <string name="title_activity_account">Account Settings</string>
    <string name="title_activity_laundry_settings">Laundry Settings</string>
    <string name="title_activity_discount_codes">Discount Codes</string>
    <string name="title_activity_payment_cards">Payment Cards</string>
    <string name="title_activity_referral">Get Free Laundry</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="available_codes">Available Codes</string>
    <string name="history">History</string>
    <string name="date">Date</string>
    <string name="invoice">Invoice</string>
    <string name="points">Points</string>
    <string name="personal_information">Personal Information</string>
    <string name="address_information">Address Information</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="discount_worth">Worth</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="cvv_code">CVV Code</string>
    <string name="delete">Delete</string>
    <string name="date_colon">Date:</string>
    <string name="code_colon">Code:</string>
    <string name="referral_code">Referral Code</string>
    <string name="discount">Discount</string>
    <string name="cancel">Cancel</string>

    <string name="minimum_order_message">You can complete your order with minimum amount of</string>
    <string name="search">Search</string>
    <string name="referral_title">Get your {{amount}} free credits</string>
    <string name="referral_text">Give a friend and get {{amount}} when they use this code on first order.</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_sub_listing">SubListingActivity</string>


</resources>
