<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:gravity="center"
    android:focusable="false"
    android:focusableInTouchMode="false"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
        <AutoCompleteTextView
            style="@style/TextInputEditText"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableRight="@drawable/ic_email_address"
            android:drawablePadding="5dp"
            android:scaleType="fitXY"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="testingg37@gmail.com"
            android:singleLine="true"/>
        <EditText
            style="@style/TextInputEditText"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:text="passpass"
            android:maxLines="1"
            android:singleLine="true" />
        <Button
            style="@style/ButtonGreen"
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
             />
        <Button
            style="@style/ButtonBorderGrey"
            android:id="@+id/forgot_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="Forgot your details"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/titillium_web_regular"
                android:gravity="center"
                android:text="Don't have an account?"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register"
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>