<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:gravity="center"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/firstName"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:drawablePadding="5dp"
                    android:maxLines="1"
                    android:text="test"

                    android:singleLine="true" />



            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/lastName"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:text="Alfred"
                    android:maxLines="1"
                    android:textColorHint="#FF00"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/phone_number"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="3337191695"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/postCode"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/post_code"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="E12pe"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/building"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/building_name_number"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="12345 test"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/street"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/street_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="12345 test"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/town"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Town"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="test"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="aftab@yopmail.com"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="123456"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register"
                style="@style/ButtonGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginBottom="5dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>