<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CheckoutActivity"
    tools:showIn="@layout/app_bar_navigation"

    >
    <RelativeLayout
        android:id="@+id/content_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@+id/drawer_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/name"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="*"
            android:layout_toRightOf="@+id/label_name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="10dp"
            android:layout_below="@+id/label_name" />

        <TextView
            android:id="@+id/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/title"
            android:textStyle="bold"
            android:layout_below="@+id/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="*"
            android:layout_below="@+id/name"
            android:layout_toRightOf="@+id/label_title" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="10dp"
            android:layout_below="@+id/label_title" />

        <TextView
            android:id="@+id/label_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/number"
            android:textStyle="bold"
            android:layout_below="@+id/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="*"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/label_number" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:padding="10dp"
            android:maxLength="16"
            android:layout_below="@+id/label_number" />


        <TextView
            android:id="@+id/label_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/year"
            android:textStyle="bold"
            android:layout_below="@+id/number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="*"
            android:layout_below="@+id/number"
            android:layout_toRightOf="@+id/label_year" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textStyle="bold"
            android:layout_below="@+id/label_year"
            />


        <TextView
            android:id="@+id/label_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/month"
            android:textStyle="bold"
            android:layout_below="@+id/year" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="*"
            android:layout_below="@+id/year"
            android:layout_toRightOf="@+id/label_month" />

        <Spinner android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textStyle="bold"
            android:layout_below="@+id/label_month"
            />


        <TextView
            android:id="@+id/label_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/cvv_code"
            android:textStyle="bold"
            android:layout_below="@+id/month" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="*"
            android:layout_below="@+id/month"
            android:layout_toRightOf="@+id/label_cvv" />

        <EditText
            android:id="@+id/ccv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv_code"
            android:maxLength="4"
            android:padding="10dp"
            android:layout_below="@+id/label_cvv" />


        <Button
            android:id="@+id/update_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_below="@+id/ccv" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>